--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,3 +15,4 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+![Action status](https://github.com/Snuskin/https:/git@github.com:Snuskin/frontend-project-lvl1.git/actions/workflows/hexlet-check.yml/badge.svg)
