--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,15 +3,12 @@ env:
   node: true
 extends:
   - airbnb-base
-  - plugin:jest/recommended
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: {
+rules: 
   no-console: 0
   import/extensions:
     - error
     - ignorePackages
     - js: always
-}
-
