--- a/.github/workflows/make-lint.yml
+++ b/.github/workflows/make-lint.yml
@@ -1,12 +1,30 @@
-name: make-lint
-on: push
+name: Eslint
+
+
+on:
+  - push
+  - pull_request
+
+env:
+  CI: true
+
 jobs:
   build:
+
+    
     runs-on: ubuntu-latest
+
+    strategy:
+      
+      matrix:
+        node-version: [16.x]
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Install modules
-       - name: Use Node.js ${{ matrix.node-version }}
+        
+        
+      - uses: actions/checkout@v2
+        
+      - name: Use Node.js ${{ matrix.node-version }}
         
         
         uses: actions/setup-node@v2
