--- a/.github/workflows/make-lint.yml
+++ b/.github/workflows/make-lint.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Install modules
+      run: yarn
     - name: make-lint
       run: make lint 
       
