--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "repository": {
     "url": "git+https://github.com/Snuskin/frontend-project-lvl1.git"
   },
-  "author": "",
+  "author": "Snuskin",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Snuskin/frontend-project-lvl1/issues"
